Fix groupe white strikes overlapping tooltips

--- a/src/styles/components/deputies-list/_filters.scss
+++ b/src/styles/components/deputies-list/_filters.scss
@@ -229,7 +229,7 @@
       }
       &::before,
       &::after {
-        z-index: 3;
+        z-index: 2;
         content: "";
         position: absolute;
         top: 0px;
